--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,8 @@
 body {
-    margin:0;
-    padding:10px 0 0 20px;
+    width: 720px;
+    margin: auto;
     font-size: 14px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 #permission_warning .warning_content {
     border: 2px solid #E5CC88;
